--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "halaplay",
+  "name": "sportkeeda",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export -o build",
+    "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@netlify/plugin-nextjs": "^4.39.3",
     "@splidejs/react-splide": "^0.7.12",
     "chakra-ui-markdown-renderer": "^4.1.0",
     "framer-motion": "^10.2.4",
