--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-markdown": "^8.0.6",
-    "swiper": "^9.1.1"
+    "react-responsive-carousel": "^3.2.23",
+    "swiper": "^9.4.1"
   }
 }
