--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_SITE_URL="https://www.halaplay.com"
-NEXT_PUBLIC_GOOGLE_ANALYTICS="UA-90012724-1"
+NEXT_PUBLIC_SITE_URL="https://www.sportskeeda.com"
+NEXT_PUBLIC_GOOGLE_ANALYTICS="xxxxxxx"
